--- a/.github/workflows/bms1.yml
+++ b/.github/workflows/bms1.yml
@@ -1,69 +1,77 @@
-name: BMS Shard 1 Scraper (Save to Repo)
+name: BMS Advance Data
 
 on:
   workflow_dispatch:
   schedule:
-    # Daily 01:00 IST (19:30 UTC)
-    - cron: "30 19 * * *"
-
-permissions:
-  contents: write   # 🔴 REQUIRED to push commits
+    - cron: "30 18 * * *"   # 12:00 AM IST (adjust if needed)
 
 jobs:
-  scrape:
+  run-bms:
     runs-on: ubuntu-latest
-    timeout-minutes: 360
 
     steps:
-      # ---------------- CHECKOUT ----------------
-      - name: 🧾 Checkout repository
+      # --------------------------------------------------
+      # 1️⃣ CHECKOUT REPO
+      # --------------------------------------------------
+      - name: Checkout repository
         uses: actions/checkout@v4
         with:
-          persist-credentials: true
+          fetch-depth: 0
 
-      # ---------------- PYTHON ----------------
-      - name: 🐍 Setup Python
+      # --------------------------------------------------
+      # 2️⃣ SETUP PYTHON
+      # --------------------------------------------------
+      - name: Setup Python
         uses: actions/setup-python@v5
         with:
           python-version: "3.11"
 
-      # ---------------- CHROME ----------------
-      - name: 🌐 Install Google Chrome
+      # --------------------------------------------------
+      # 3️⃣ INSTALL SYSTEM DEPENDENCIES (CHROME)
+      # --------------------------------------------------
+      - name: Install Chrome
         run: |
           sudo apt-get update
-          sudo apt-get install -y wget unzip
-          wget -q https://dl.google.com/linux/direct/google-chrome-stable_current_amd64.deb
-          sudo dpkg -i google-chrome-stable_current_amd64.deb || sudo apt-get -f install -y
-          google-chrome --version
+          sudo apt-get install -y wget gnupg
+          wget https://dl.google.com/linux/direct/google-chrome-stable_current_amd64.deb
+          sudo apt-get install -y ./google-chrome-stable_current_amd64.deb
 
-      # ---------------- DEPENDENCIES ----------------
-      - name: 📦 Install Python dependencies
+      # --------------------------------------------------
+      # 4️⃣ INSTALL PYTHON DEPENDENCIES
+      # --------------------------------------------------
+      - name: Install Python dependencies
         run: |
-          python -m pip install --upgrade pip
-          pip install \
-            selenium \
-            webdriver-manager \
-            cloudscraper
+          pip install --upgrade pip
+          pip install cloudscraper selenium webdriver-manager
 
-      # ---------------- RUN SCRAPER ----------------
-      - name: 🚀 Run BMS shard 1 scraper
-        env:
-          PYTHONUNBUFFERED: "1"
-        run: |
-          python bms1.py
-
-      # ---------------- SAVE TO GITHUB ----------------
-      - name: 💾 Commit and push output
+      # --------------------------------------------------
+      # 5️⃣ SETUP GIT CONFIG
+      # --------------------------------------------------
+      - name: Setup Git
         run: |
           git config user.name "github-actions"
-          git config user.email "actions@github.com"
+          git config user.email "github-actions@github.com"
 
+      # --------------------------------------------------
+      # 6️⃣ ENSURE FOLDER STRUCTURE
+      # --------------------------------------------------
+      - name: Prepare folders
+        run: |
+          mkdir -p advance/date
+
+      # --------------------------------------------------
+      # 7️⃣ RUN SCRIPT
+      # --------------------------------------------------
+      - name: Run BMS script
+        run: |
+          python bookmyshownewV1.py
+
+      # --------------------------------------------------
+      # 8️⃣ COMMIT ONLY ADVANCE DATA
+      # --------------------------------------------------
+      - name: Commit advance data
+        run: |
           git status
-          git add advance/
-
-          git commit -m "Advance BMS shard 1 data ($(date +'%Y-%m-%d'))" || echo "Nothing to commit"
+          git add advance/date/
+          git commit -m "Advance data update $(date +'%Y-%m-%d')" || echo "No changes to commit"
           git push
-
-      # ---------------- DONE ----------------
-      - name: ✅ Job completed
-        run: echo "Shard 1 completed & data saved to repo"
