--- a/.github/workflows/bmsmain.yml
+++ b/.github/workflows/bmsmain.yml
@@ -1,15 +1,18 @@
-name: BMS Shard 2 Scraper (Save to Repo)
+name: BMS Shards Scraper (Save to Repo)
 
 on:
   workflow_dispatch:
+  schedule:
+    # Daily 01:00 IST (19:30 UTC)
+    - cron: "30 19 * * *"
 
 permissions:
-  contents: write   # 🔴 REQUIRED to push commits
+  contents: write   # REQUIRED to push commits
 
 jobs:
   scrape:
     runs-on: ubuntu-latest
-    timeout-minutes: 60
+    timeout-minutes: 90
 
     steps:
       # ---------------- CHECKOUT ----------------
@@ -42,12 +45,24 @@ jobs:
             webdriver-manager \
             cloudscraper
 
-      # ---------------- RUN SCRAPER ----------------
-      - name: 🚀 Run BMS shard 1 scraper
+      # ---------------- RUN ALL SHARDS ----------------
+      - name: 🚀 Run BMS shard scripts (1 → 8)
         env:
           PYTHONUNBUFFERED: "1"
         run: |
+          set -e
+          echo "▶️ Starting BMS shard scrapers"
+
+          python bms1.py
           python bms2.py
+          python bms3.py
+          python bms4.py
+          python bms5.py
+          python bms6.py
+          python bms7.py
+          python bms8.py
+
+          echo "✅ All BMS shard scripts completed"
 
       # ---------------- SAVE TO GITHUB ----------------
       - name: 💾 Commit and push output
@@ -58,9 +73,9 @@ jobs:
           git status
           git add advance/
 
-          git commit -m "Advance BMS shard 1 data ($(date +'%Y-%m-%d'))" || echo "Nothing to commit"
+          git commit -m "Advance BMS data (all shards) ($(date +'%Y-%m-%d'))" || echo "Nothing to commit"
           git push
 
       # ---------------- DONE ----------------
       - name: ✅ Job completed
-        run: echo "Shard 1 completed & data saved to repo"
+        run: echo "All BMS shards completed & data saved"
