--- a/.github/workflows/bms2.yml
+++ b/.github/workflows/bms2.yml
@@ -1,10 +1,14 @@
-name: BMS Shard 2 Scraper (Save to Repo)
+name: BMS Shard 2 Scraper
 
 on:
   workflow_dispatch:
 
+concurrency:
+  group: bms-advance-main
+  cancel-in-progress: false
+
 permissions:
-  contents: write   # 🔴 REQUIRED to push commits
+  contents: write
 
 jobs:
   scrape:
@@ -12,55 +16,41 @@ jobs:
     timeout-minutes: 60
 
     steps:
-      # ---------------- CHECKOUT ----------------
-      - name: 🧾 Checkout repository
+      - name: 🧾 Checkout
         uses: actions/checkout@v4
         with:
+          fetch-depth: 0
           persist-credentials: true
 
-      # ---------------- PYTHON ----------------
       - name: 🐍 Setup Python
         uses: actions/setup-python@v5
         with:
           python-version: "3.11"
 
-      # ---------------- CHROME ----------------
-      - name: 🌐 Install Google Chrome
+      - name: 🌐 Install Chrome
         run: |
           sudo apt-get update
           sudo apt-get install -y wget unzip
           wget -q https://dl.google.com/linux/direct/google-chrome-stable_current_amd64.deb
           sudo dpkg -i google-chrome-stable_current_amd64.deb || sudo apt-get -f install -y
+          rm -f google-chrome-stable_current_amd64.deb
           google-chrome --version
 
-      # ---------------- DEPENDENCIES ----------------
-      - name: 📦 Install Python dependencies
+      - name: 📦 Install deps
         run: |
-          python -m pip install --upgrade pip
-          pip install \
-            selenium \
-            webdriver-manager \
-            cloudscraper
+          pip install --upgrade pip
+          pip install selenium webdriver-manager cloudscraper
 
-      # ---------------- RUN SCRAPER ----------------
-      - name: 🚀 Run BMS shard 2 scraper
-        env:
-          PYTHONUNBUFFERED: "1"
-        run: |
-          python bms2.py
+      - name: 🚀 Run shard 2
+        run: python bms2.py
 
-      # ---------------- SAVE TO GITHUB ----------------
-      - name: 💾 Commit and push output
+      - name: 💾 Commit & push (NO FAIL)
         run: |
           git config user.name "github-actions"
           git config user.email "actions@github.com"
 
-          git status
           git add advance/
+          git commit -m "Advance BMS shard 2 ($(date +'%Y-%m-%d'))" || echo "Nothing to commit"
 
-          git commit -m "Advance BMS shard 2 data ($(date +'%Y-%m-%d'))" || echo "Nothing to commit"
-          git push
-
-      # ---------------- DONE ----------------
-      - name: ✅ Job completed
-        run: echo "Shard 1 completed & data saved to repo"
+          git pull --rebase origin main || true
+          git push origin main || git push --force-with-lease origin main
