--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -4,7 +4,7 @@ on:
   workflow_dispatch:
   schedule:
     # Every hour at HH:10 (UTC)
-    - cron: "0 0-22/2 * * *"
+    - cron: "0 21-23/2,1-17/2 * * *"
 
 permissions:
   contents: write
