--- a/.github/workflows/dailymain.yml
+++ b/.github/workflows/dailymain.yml
@@ -1,9 +1,9 @@
-name: BMS DailyBO 1–9 + Combine (Matrix)
+name: BMS DailyBO 1–9 + Combine (Parallel Safe No Artifacts)
 
 on:
   workflow_dispatch:
   schedule:
-    # Every hour at HH:10 (UTC)
+    # Every hour (UTC) → IST handled inside code
     - cron: "0 * * * *"
 
 permissions:
@@ -26,7 +26,6 @@ jobs:
         uses: actions/checkout@v4
         with:
           fetch-depth: 0
-          persist-credentials: true
 
       # ---------------- PYTHON ----------------
       - name: 🐍 Setup Python
@@ -34,18 +33,8 @@ jobs:
         with:
           python-version: "3.11"
 
-      # ---------------- CHROME ----------------
-      - name: 🌐 Install Google Chrome
-        run: |
-          sudo apt-get update
-          sudo apt-get install -y wget unzip
-          wget -q https://dl.google.com/linux/direct/google-chrome-stable_current_amd64.deb
-          sudo dpkg -i google-chrome-stable_current_amd64.deb || sudo apt-get -f install -y
-          rm -f google-chrome-stable_current_amd64.deb
-          google-chrome --version
-
       # ---------------- DEPENDENCIES ----------------
-      - name: 📦 Install Python dependencies
+      - name: 📦 Install dependencies
         run: |
           python -m pip install --upgrade pip
           pip install selenium webdriver-manager cloudscraper aiohttp pytz
@@ -55,25 +44,29 @@ jobs:
         run: |
           python bmsdaily${{ matrix.shard }}.py
 
-      # ---------------- COMMIT & PUSH SHARD DATA ----------------
-      - name: 💾 Commit shard output
+      # ---------------- SAFE SHARD COMMIT ----------------
+      - name: 💾 Commit shard to isolated branch
         run: |
           git config user.name "github-actions"
           git config user.email "actions@github.com"
 
-          git status
+          BRANCH="shard-${{ matrix.shard }}"
+
+          # create/reset shard branch
+          git checkout -B $BRANCH
+
           git add daily/
-          git commit -m "Daily BMS shard ${{ matrix.shard }} ($(date +'%Y-%m-%d'))" || echo "Nothing to commit"
+          git status
 
-          # retry-safe push
-          for i in 1 2 3; do
-            git pull --rebase origin main || true
-            git push origin main && break
-            echo "Retry push $i..."
-            sleep 3
-          done
+          if git diff --cached --quiet; then
+            echo "No changes for shard $BRANCH"
+            exit 0
+          fi
 
-          git push --force-with-lease origin main || true
+          git commit -m "Shard ${{ matrix.shard }} update ($(date +'%Y-%m-%d %H:%M'))"
+
+          # force is SAFE here because each shard owns its own branch
+          git push origin $BRANCH --force
 
   combine:
     name: Combine all shards
@@ -83,11 +76,10 @@ jobs:
 
     steps:
       # ---------------- CHECKOUT ----------------
-      - name: 🧾 Checkout repo
+      - name: 🧾 Checkout main
         uses: actions/checkout@v4
         with:
           fetch-depth: 0
-          persist-credentials: true
 
       # ---------------- PYTHON ----------------
       - name: 🐍 Setup Python
@@ -95,21 +87,35 @@ jobs:
         with:
           python-version: "3.11"
 
+      # ---------------- FETCH SHARDS ----------------
+      - name: 🔄 Fetch shard branches
+        run: |
+          git fetch origin
+          for i in 1 2 3 4 5 6 7 8 9; do
+            git show-ref --verify --quiet refs/remotes/origin/shard-$i && echo "Found shard-$i" || echo "Missing shard-$i"
+          done
+
       # ---------------- COMBINE ----------------
       - name: 🔗 Combine shard JSONs
         run: |
           pip install pytz
           python combine_dailyshards.py
 
-      # ---------------- COMMIT & PUSH FINAL FILES ----------------
-      - name: 💾 Commit final combined JSONs
+      # ---------------- FINAL COMMIT ----------------
+      - name: 💾 Commit & push final combined data
         run: |
           git config user.name "github-actions"
           git config user.email "actions@github.com"
 
-          git status
           git add daily/
-          git commit -m "Final combined BMS data ($(date +'%Y-%m-%d'))" || echo "Nothing to commit"
+          git status
 
-          git pull --rebase origin main || true
-          git push origin main || git push --force-with-lease origin main
+          if git diff --cached --quiet; then
+            echo "No combined changes"
+            exit 0
+          fi
+
+          git commit -m "Final combined BMS data ($(date +'%Y-%m-%d %H:%M'))"
+
+          git pull --rebase origin main
+          git push origin main
