--- a/.github/workflows/cleanup.yml
+++ b/.github/workflows/cleanup.yml
@@ -26,6 +26,11 @@ jobs:
         with:
           python-version: "3.11"
 
+      - name: 📦 Install Python dependencies
+        run: |
+          python -m pip install --upgrade pip
+          pip install pytz
+
       - name: 🧹 Run cleanup script
         run: |
           python cleanup_shard_files.py
