--- a/.github/workflows/combiner.yml
+++ b/.github/workflows/combiner.yml
@@ -41,7 +41,7 @@ jobs:
       # ---------------- RUN COMBINE ----------------
       - name: 🔗 Combine shards
         run: |
-          python combine_shards_rotate.py
+          python combine_shards.py
 
       # ---------------- GIT CONFIG ----------------
       - name: 🧑‍💻 Configure git
