--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,9 +1,8 @@
-name: BMS Tomorrow Advance Combine (Matrix)
+name: BMS Shards 1–9 + Combine (Matrix)
 
 on:
   workflow_dispatch:
   schedule:
-    # IST window mapped in UTC
     - cron: "0 21-23/2,1-17/2 * * *"
 
 permissions:
@@ -11,7 +10,7 @@ permissions:
 
 jobs:
 # =====================================================
-# 1️⃣ RUN SHARDS (NO GIT PUSH)
+# 1️⃣ SHARDS (GENERATE + PUSH)
 # =====================================================
   shards:
     name: Shard ${{ matrix.shard }}
@@ -24,46 +23,49 @@ jobs:
         shard: [1,2,3,4,5,6,7,8,9]
 
     steps:
-      # ---------------- CHECKOUT ----------------
       - name: 🧾 Checkout repo
         uses: actions/checkout@v4
         with:
           fetch-depth: 0
           persist-credentials: true
 
-      # ---------------- PYTHON ----------------
       - name: 🐍 Setup Python
         uses: actions/setup-python@v5
         with:
           python-version: "3.11"
 
-      # ---------------- CHROME ----------------
-      - name: 🌐 Install Google Chrome
+      - name: 🌐 Install Chrome
         run: |
           sudo apt-get update
           sudo apt-get install -y wget unzip
           wget -q https://dl.google.com/linux/direct/google-chrome-stable_current_amd64.deb
           sudo dpkg -i google-chrome-stable_current_amd64.deb || sudo apt-get -f install -y
-          rm -f google-chrome-stable_current_amd64.deb
-          google-chrome --version
 
-      # ---------------- DEPENDENCIES ----------------
-      - name: 📦 Install Python dependencies
+      - name: 📦 Install dependencies
         run: |
-          python -m pip install --upgrade pip
           pip install selenium webdriver-manager cloudscraper aiohttp pytz
 
-      # ---------------- RUN SHARD ----------------
       - name: 🚀 Run shard scraper
         run: |
           python bms${{ matrix.shard }}.py
 
-      # ---------------- NO PUSH ----------------
-      - name: 🧹 Shard completed
-        run: echo "Shard ${{ matrix.shard }} finished successfully"
+      - name: 💾 Commit shard outputs
+        run: |
+          git config user.name "github-actions"
+          git config user.email "actions@github.com"
+
+          git add advance/data/
+          git commit -m "Shard ${{ matrix.shard }} output ($(date +'%Y-%m-%d %H:%M IST'))" || echo "Nothing to commit"
+
+          # rebase-safe retry push
+          for i in 1 2 3; do
+            git pull --rebase origin main || true
+            git push origin main && break
+            sleep 3
+          done
 
 # =====================================================
-# 2️⃣ COMBINE + SINGLE SAFE PUSH
+# 2️⃣ COMBINE (AFTER ALL SHARDS)
 # =====================================================
   combine:
     name: Combine all shards
@@ -72,42 +74,32 @@ jobs:
     timeout-minutes: 20
 
     steps:
-      # ---------------- CHECKOUT ----------------
       - name: 🧾 Checkout repo
         uses: actions/checkout@v4
         with:
           fetch-depth: 0
           persist-credentials: true
 
-      # ---------------- PYTHON ----------------
       - name: 🐍 Setup Python
         uses: actions/setup-python@v5
         with:
           python-version: "3.11"
 
-      # ---------------- COMBINE ----------------
       - name: 🔗 Combine shard JSONs
         run: |
           pip install pytz
           python combine_shards.py
 
-      # ---------------- SAFE COMMIT & PUSH ----------------
-      - name: 💾 Commit final combined JSONs (SAFE)
+      - name: 💾 Commit final combined JSONs
         run: |
           git config user.name "github-actions"
           git config user.email "actions@github.com"
 
-          echo "🔍 Git status before commit"
-          git status
-          git diff --stat
-
-          git add advance/
+          git add advance/data/
           git commit -m "Final combined BMS data ($(date +'%Y-%m-%d %H:%M IST'))" || echo "Nothing to commit"
 
-          # 🔁 Rebase-safe retry push (NO RESET, NO FORCE)
           for i in 1 2 3; do
             git pull --rebase origin main || true
             git push origin main && break
-            echo "Retry push $i..."
             sleep 3
           done
