--- a/.github/workflows/bmsrotatemain.yml
+++ b/.github/workflows/bmsrotatemain.yml
@@ -61,7 +61,7 @@ jobs:
       - name: 📦 Install deps
         run: |
           pip install --upgrade pip
-          pip install cloudscraper pytz
+          pip install cloudscraper pytz aiohttp
 
       - name: 🚀 Run shard ${{ matrix.shard }}
         run: |
